2015-12-27  Jens Lechtenboerger  <jens.lechtenboerger@fsfe.org>

	* gnus-util.el (gnus-subsetp): New function.

	* mml-sec.el: Fix warnings by adding autoloads (bug#18718).
	(mml-secure-safe-bcc-list): New variable.
	(mml-secure-is-encrypted-p, mml-secure-bcc-is-safe): New functions.

2015-12-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	Fix `gnus-union' so as to behave like `cl-union'.

	* gnus-group.el (gnus-group-prepare-flat):
	Make gnus-union use `equal' to compare items in lists.

	* gnus-util.el (gnus-union): Make it behave like cl-union partially.

2015-12-17  Eli Zaretskii  <eliz@gnu.org>

	* auth-source.el (auth-source-ensure-strings):
	Don't make a list out of 't'.  (Bug#22188)

2015-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (byte-optimize-apply): Make the use-mapcan advice work
	for (function nconc) as well as (quote nconc).

2015-12-04  Daiki Ueno  <ueno@gnu.org>

	* qp.el (quoted-printable-encode-region): Bind `case-fold-search' to
	nil when looking for "^From ".  Problem reported by Simon Josefsson.

2015-12-04  Artur Malabarba  <bruce.connor.am@gmail.com>

	* sasl-scram-rfc.el: Add a "Package:" header.

2015-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnml.el (nnml-retrieve-groups): Remove.  See:
	<http://thread.gmane.org/gmane.emacs.gnus.general/86308> and
	<http://thread.gmane.org/gmane.emacs.gnus.general/86321>

2015-11-17  Paul Eggert  <eggert@cs.ucla.edu>

	Fix docstring quoting problems with ‘ '’

	Problem reported by Artur Malabarba in:
	http://lists.gnu.org/archive/html/emacs-devel/2015-11/msg01513.html
	Most of these fixes are to documentation; many involve fixing
	longstanding quoting glitches that are independent of the
	recent substitute-command-keys changes.  The changes to code are:
	* gnus-mlspl.el (gnus-group-split-fancy):
	* hashcash.el (hashcash-extra-generate-parameters):
	* message.el (message-qmail-inject-args, message-cite-reply-position):
	* mm-decode.el (mm-inline-large-images):