@@ -311,9 +311,8 @@ either an error is raised or not."
   (when (mml-secure-is-encrypted-p)
     (let ((bcc (mail-strip-quoted-names (message-fetch-field "bcc"))))
       (when bcc
-	;; Split recipients at "," boundary, omit empty strings (t),
-	;; and strip whitespace.
-	(let ((bcc-list (split-string bcc "," t "\\s-+")))
+	(let ((bcc-list (mapcar #'cadr
+				(mail-extract-address-components bcc t))))
 	  (unless (gnus-subsetp bcc-list mml-secure-safe-bcc-list)
 	    (unless (yes-or-no-p "Message for encryption contains Bcc header.\
   This may give away all Bcc'ed identities to all recipients.\
