@@ -1,3 +1,8 @@
+2015-12-28  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mml-sec.el (mml-secure-bcc-is-safe):
+	Don't use split-string with 4th arg for old Emacsen compatibility.
+
 2015-12-27  Jens Lechtenboerger  <jens.lechtenboerger@fsfe.org>
 
 	* gnus-util.el (gnus-subsetp): New function.
